--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SM_Projekt_AplikacjaTODO"
         tools:targetApi="31">
-        <activity android:name=".NewProfileActivity"
-            android:exported="false"/>
+        <activity
+            android:name=".CardViewActivity"
+            android:exported="false"
+            android:label="@string/title_activity_card_view"
+            android:theme="@style/Theme.SM_Projekt_AplikacjaTODO" />
+        <activity
+            android:name=".NewProfileActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -23,8 +29,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
     </application>
 
 </manifest>
