--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
         tools:targetApi="31">
         <activity
-            android:name=".CardViewActivity"
+            android:name=".TaskListActivity"
             android:exported="false"
             android:label="@string/title_activity_card_view"
             android:theme="@style/Theme.SM_Projekt_AplikacjaTODO" />
