--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".NewTaskActivity"
+            android:exported="false"
+            android:theme="@style/Theme.SM_Projekt_AplikacjaTODO"/>
+        <activity
             android:name=".TaskViewActivity"
             android:exported="false"
             android:theme="@style/Theme.SM_Projekt_AplikacjaTODO"/>
