--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,10 @@
             android:exported="false"
             android:theme="@style/Theme.SM_Projekt_AplikacjaTODO"/>
         <activity
+            android:name=".EditProfileActivity"
+            android:exported="false"
+            android:theme="@style/Theme.SM_Projekt_AplikacjaTODO"/>
+        <activity
             android:name=".TaskViewActivity"
             android:exported="false"
             android:theme="@style/Theme.SM_Projekt_AplikacjaTODO"/>
