--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,28 +20,28 @@
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
         tools:targetApi="31">
         <activity
-            android:name=".NewTaskActivity"
+            android:name=".activities.NewTaskActivity"
             android:exported="false"
             android:theme="@style/Theme.SM_Projekt_AplikacjaTODO"/>
         <activity
-            android:name=".EditProfileActivity"
+            android:name=".activities.EditProfileActivity"
             android:exported="false"
             android:theme="@style/Theme.SM_Projekt_AplikacjaTODO"/>
         <activity
-            android:name=".TaskViewActivity"
+            android:name=".activities.TaskViewActivity"
             android:exported="false"
             android:theme="@style/Theme.SM_Projekt_AplikacjaTODO"/>
         <activity
-            android:name=".TaskListActivity"
+            android:name=".activities.TaskListActivity"
             android:exported="false"
             android:label="@string/title_activity_card_view"
             android:theme="@style/Theme.SM_Projekt_AplikacjaTODO" />
         <activity
-            android:name=".NewProfileActivity"
+            android:name=".activities.NewProfileActivity"
             android:exported="false"
             android:theme="@style/Theme.SM_Projekt_AplikacjaTODO"/>
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.SM_Projekt_AplikacjaTODO">
             <intent-filter>
